--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+ul,
+ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+/* UTILS */
+.wrapper {
+  display: grid;
+  justify-content: center;
+  padding: 30px;
+}
